--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon --debug ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -12,9 +12,11 @@
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "jade-bootstrap": "*",
-    "pug-bootstrap": "*",
+    "mongodb": "^2.2.31",
+    "mongoose": "~4.4.9",
     "morgan": "~1.8.1",
     "pug": "^2.0.0-rc.1",
+    "pug-bootstrap": "*",
     "serve-favicon": "~2.2.0"
   }
 }
